bppackaging/src/objects/Vendor_Receiving_Header__c.object
<CustomObject>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress_VI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>In Progress VI</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Vendor Receiving Headers</relationshipLabel>
        <relationshipName>Vendor_Receiving_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Receiving_From_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Receiving From Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Vendor Receiving Header Owners</relationshipLabel>
        <relationshipName>Vendor_Receiving_Header_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_Number__c</fullName>
        <label>Packing Slip#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_From_Invoice_Total__c</fullName>
        <label>Receiving From Invoice Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receiving_Total__c</fullName>
        <label>Receiving Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Receiving Headers</relationshipLabel>
        <relationshipName>Vendor_Receiving_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Receiving Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoiced</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </filters>
        <label>Invoiced</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>